# Detective-RPG-Simulator

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: case-quality-report.yml
assets/dialogue/: interview_default.json  interview_hostile_witness.json  interview_intimate.json  interview_neighbor.json  interview_passerby.json  interview_red_herring.json  interview_staff.json  interview_suspect.json
assets/text_atoms/: nemesis_motifs.yml  noir_phrases.yml  profiling_phrases.yml  recurring_npc_lines.yml  report_templates.yml  witness_lines.yml
data/names/: names.db
data/schemas/: evidence_catalogue.yml  locations.yml  ontology.yml
data/seeds/: dev_seed_001.json  dev_seed_002.json
docs/: MASTER_DOCTRINE.md
docs/blueprint/: ARCHITECTURE.md  DIALOG_TREE_REUSE_NOTES.md  EVIDENCE_COMPOSITION_RULES.md  NEMESIS_MOTIF_LIBRARY.md  PHASE_2_TASKS.md  (+20 more)
notebook/: README.md  case_dump.py  notebook.html  notebook_qt.py
scripts/: dump_truth.py  profile_case.py  run_game.py  run_seed.py  run_textual.py  sweep_case_quality.py  validate_paths.py
tests/: conftest.py  test_actions_costs.py  test_campaign_spine.py  test_case_guidance.py  test_cli_dialog_prompt.py  test_cli_playthrough.py  test_cli_three_playthroughs.py  test_deduction_support.py  test_dialog_content.py  test_names_db.py  test_nemesis_adaptation.py  test_op_pipeline.py  test_projector_fairness.py  test_save_load.py  test_seed_replay.py  test_showrunner.py  test_single_case_loop.py  test_sweep_case_quality.py  test_truth_invariants.py  test_ui_text.py  test_world_store.py
(+83 files in other folders)
