[project]
name = "detective-rpg-simulator"
version = "0.1.0"
description = "Procedural noir detective RPG simulator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "networkx>=3.0",
  "rich>=13.0",
  "textual>=0.66.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
